[gd_scene load_steps=106 format=3 uid="uid://15r84w40j377"]

[ext_resource type="Script" uid="uid://vj6f8wf4y85y" path="res://scripts/player.gd" id="1_onrkg"]
[ext_resource type="Texture2D" uid="uid://cw51bi8hmm6dw" path="res://assets/Player/Character_Down.png" id="2_y4r1p"]
[ext_resource type="Texture2D" uid="uid://bs0lbqvho8n0f" path="res://assets/Player/Character_DownLeft.png" id="3_d2wvv"]
[ext_resource type="PackedScene" uid="uid://clugljbwptr1t" path="res://scenes/statsUI.tscn" id="3_qhqgy"]
[ext_resource type="Texture2D" uid="uid://d2jy3yxq67q1u" path="res://assets/Player/Character_DownRight.png" id="4_3v2ag"]
[ext_resource type="Texture2D" uid="uid://cq5d2kmnq324a" path="res://assets/Player/idle2.png" id="5_4r5pv"]
[ext_resource type="Texture2D" uid="uid://blnd6ebldvq0g" path="res://assets/Player/Character_Left.png" id="5_jej6c"]
[ext_resource type="Texture2D" uid="uid://djuli84u4pu7y" path="res://assets/Player/Character_Right.png" id="6_f1ej7"]
[ext_resource type="Texture2D" uid="uid://bua54mjsvfhvg" path="res://assets/Player/Character_SlashDownLeft.png" id="7_f1ej7"]
[ext_resource type="Texture2D" uid="uid://cke1wbkfsjpmh" path="res://assets/Player/Character_Up.png" id="7_oprun"]
[ext_resource type="Texture2D" uid="uid://by4wr7ybwr2ug" path="res://assets/Player/Character_UpLeft.png" id="8_a8ls1"]
[ext_resource type="Texture2D" uid="uid://bhfdnlw0jxvrg" path="res://assets/Player/Character_SlashDownRight.png" id="8_oprun"]
[ext_resource type="Texture2D" uid="uid://citgnew8kh702" path="res://assets/Player/Character_SlashUpLeft.png" id="9_a8ls1"]
[ext_resource type="Texture2D" uid="uid://dmror1suhaq6w" path="res://assets/Player/Character_UpRight.png" id="9_qfm1y"]
[ext_resource type="Texture2D" uid="uid://chcj6gd3vo5jv" path="res://assets/Player/Character_SlashUpRight.png" id="10_qfm1y"]
[ext_resource type="Texture2D" uid="uid://bnlscoh0bwiau" path="res://assets/weapon/Sword_DownLeft.png" id="14_fulsm"]
[ext_resource type="Texture2D" uid="uid://4ooocmtarn0b" path="res://assets/weapon/Sword_DownRight.png" id="15_4r5pv"]
[ext_resource type="Texture2D" uid="uid://cydcpqkx4h521" path="res://assets/weapon/Sword_UpLeft.png" id="15_oprun"]
[ext_resource type="Texture2D" uid="uid://dkiwwbtxfsauv" path="res://assets/weapon/Sword_UpRight.png" id="17_60mlk"]
[ext_resource type="PackedScene" uid="uid://b80naeqdebnnu" path="res://inventory/inventory_gui.tscn" id="20_60mlk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("2_y4r1p")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("2_y4r1p")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("2_y4r1p")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("2_y4r1p")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("3_d2wvv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("3_d2wvv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("3_d2wvv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("3_d2wvv")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl30"]
atlas = ExtResource("4_3v2ag")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cv2"]
atlas = ExtResource("4_3v2ag")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("4_3v2ag")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7fs"]
atlas = ExtResource("4_3v2ag")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqfne"]
atlas = ExtResource("2_y4r1p")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnwbv"]
atlas = ExtResource("5_jej6c")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8cc"]
atlas = ExtResource("5_jej6c")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_487ah"]
atlas = ExtResource("5_jej6c")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1ol"]
atlas = ExtResource("5_jej6c")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj30b"]
atlas = ExtResource("6_f1ej7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc3p3"]
atlas = ExtResource("6_f1ej7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hax0n"]
atlas = ExtResource("6_f1ej7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4otl"]
atlas = ExtResource("6_f1ej7")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gdjj"]
atlas = ExtResource("7_f1ej7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc3ue"]
atlas = ExtResource("7_f1ej7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxlsd"]
atlas = ExtResource("7_f1ej7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha2mi"]
atlas = ExtResource("7_f1ej7")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_apa73"]
atlas = ExtResource("7_f1ej7")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_74r1k"]
atlas = ExtResource("8_oprun")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8svfe"]
atlas = ExtResource("8_oprun")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a3c5"]
atlas = ExtResource("8_oprun")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_42b1b"]
atlas = ExtResource("8_oprun")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7ic4"]
atlas = ExtResource("8_oprun")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_au7lq"]
atlas = ExtResource("9_a8ls1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nubpm"]
atlas = ExtResource("9_a8ls1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua5cf"]
atlas = ExtResource("9_a8ls1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_51ujp"]
atlas = ExtResource("9_a8ls1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk41t"]
atlas = ExtResource("9_a8ls1")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuw3a"]
atlas = ExtResource("10_qfm1y")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8txt3"]
atlas = ExtResource("10_qfm1y")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2w11d"]
atlas = ExtResource("10_qfm1y")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_770dr"]
atlas = ExtResource("10_qfm1y")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8f1cb"]
atlas = ExtResource("10_qfm1y")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2b1d"]
atlas = ExtResource("7_oprun")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs1tg"]
atlas = ExtResource("7_oprun")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dvfe"]
atlas = ExtResource("7_oprun")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_giy8y"]
atlas = ExtResource("7_oprun")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdfoy"]
atlas = ExtResource("8_a8ls1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhpqf"]
atlas = ExtResource("8_a8ls1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5jhy"]
atlas = ExtResource("8_a8ls1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_holxr"]
atlas = ExtResource("8_a8ls1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx1m4"]
atlas = ExtResource("9_qfm1y")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gjji"]
atlas = ExtResource("9_qfm1y")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2ulf"]
atlas = ExtResource("9_qfm1y")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e8lb"]
atlas = ExtResource("9_qfm1y")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_y4r1p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}],
"loop": false,
"name": &"Down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}],
"loop": false,
"name": &"DownLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31cv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7fs")
}],
"loop": false,
"name": &"DownRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqfne")
}, {
"duration": 1.0,
"texture": ExtResource("5_4r5pv")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl8cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_487ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1ol")
}],
"loop": false,
"name": &"Left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj30b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc3p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hax0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4otl")
}],
"loop": false,
"name": &"Right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gdjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc3ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxlsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha2mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apa73")
}],
"loop": false,
"name": &"SlashDownLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_74r1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8svfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a3c5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42b1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7ic4")
}],
"loop": false,
"name": &"SlashDownRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_au7lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nubpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua5cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51ujp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk41t")
}],
"loop": false,
"name": &"SlashUpLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuw3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8txt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2w11d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_770dr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8f1cb")
}],
"loop": false,
"name": &"SlashUpRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2b1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs1tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dvfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giy8y")
}],
"loop": false,
"name": &"Up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdfoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhpqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5jhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_holxr")
}],
"loop": false,
"name": &"UpLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx1m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gjji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2ulf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e8lb")
}],
"loop": false,
"name": &"UpRight",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrkg"]
size = Vector2(128.5, 128.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tuyoq"]
bg_color = Color(0.570565, 0.0602161, 0.0940437, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fjrip"]
bg_color = Color(2.76752e-06, 0.477607, 0.158091, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qhqgy"]
bg_color = Color(0.360784, 0.294118, 0.207843, 0.839216)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g2els"]
bg_color = Color(0.24804, 0.152187, 0.0583534, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dqkch"]
bg_color = Color(0.266667, 0.639216, 0.858824, 0.415686)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qlg0r"]
bg_color = Color(0, 0.408172, 0.733169, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4r5pv"]
bg_color = Color(0.85787, 0, 0.103827, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_60mlk"]
bg_color = Color(0, 0.725469, 0.199944, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjsmb"]
atlas = ExtResource("14_fulsm")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwp2n"]
atlas = ExtResource("14_fulsm")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yhus"]
atlas = ExtResource("14_fulsm")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlll7"]
atlas = ExtResource("14_fulsm")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk6i7"]
atlas = ExtResource("14_fulsm")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6c3st"]
atlas = ExtResource("15_4r5pv")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1da1t"]
atlas = ExtResource("15_4r5pv")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p21yu"]
atlas = ExtResource("15_4r5pv")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_irpag"]
atlas = ExtResource("15_4r5pv")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpsgo"]
atlas = ExtResource("15_4r5pv")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("15_oprun")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("15_oprun")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdulj"]
atlas = ExtResource("15_oprun")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vau08"]
atlas = ExtResource("15_oprun")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsb7e"]
atlas = ExtResource("15_oprun")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jx8is"]
atlas = ExtResource("17_60mlk")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vx63k"]
atlas = ExtResource("17_60mlk")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lw0jh"]
atlas = ExtResource("17_60mlk")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry8ed"]
atlas = ExtResource("17_60mlk")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_au8ao"]
atlas = ExtResource("17_60mlk")
region = Rect2(256, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_f1ej7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjsmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwp2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yhus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlll7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qk6i7")
}],
"loop": false,
"name": &"DownLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6c3st")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1da1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p21yu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irpag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpsgo")
}],
"loop": false,
"name": &"DownRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdulj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vau08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsb7e")
}],
"loop": false,
"name": &"UpLeft",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jx8is")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vx63k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lw0jh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry8ed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_au8ao")
}],
"loop": false,
"name": &"UpRight",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_fulsm"]
radius = 251.794

[node name="CharacterBody2D" type="CharacterBody2D"]
scale = Vector2(0.1, 0.1)
collision_layer = 3
script = ExtResource("1_onrkg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -25)
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_y4r1p")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.137611

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.25, -0.25)
shape = SubResource("RectangleShape2D_onrkg")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5, 5)

[node name="Bary" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthBar" type="ProgressBar" parent="Bary"]
visible = false
layout_mode = 0
offset_left = -1110.0
offset_top = -620.0
offset_right = -360.0
offset_bottom = -570.0
theme_override_styles/background = SubResource("StyleBoxFlat_tuyoq")
theme_override_styles/fill = SubResource("StyleBoxFlat_fjrip")
show_percentage = false

[node name="StaminaBar" type="ProgressBar" parent="Bary"]
visible = false
layout_mode = 0
offset_left = -1110.0
offset_top = -500.0
offset_right = -360.0
offset_bottom = -450.0
theme_override_font_sizes/font_size = 100
theme_override_styles/background = SubResource("StyleBoxFlat_qhqgy")
theme_override_styles/fill = SubResource("StyleBoxFlat_g2els")
show_percentage = false

[node name="ManaBar" type="ProgressBar" parent="Bary"]
visible = false
layout_mode = 0
offset_left = -1110.0
offset_top = -560.0
offset_right = -360.0
offset_bottom = -510.0
theme_override_styles/background = SubResource("StyleBoxFlat_dqkch")
theme_override_styles/fill = SubResource("StyleBoxFlat_qlg0r")
show_percentage = false

[node name="EnemyHealthBar" type="ProgressBar" parent="Bary"]
visible = false
layout_mode = 0
offset_left = -130.0
offset_top = -180.0
offset_right = 130.0
offset_bottom = -153.0
theme_override_styles/background = SubResource("StyleBoxFlat_4r5pv")
theme_override_styles/fill = SubResource("StyleBoxFlat_60mlk")
show_percentage = false

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -25)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_f1ej7")
animation = &"DownLeft"

[node name="Stats" parent="." instance=ExtResource("3_qhqgy")]
visible = false
z_index = 1
offset_left = -540.0
offset_top = -620.0
offset_right = 1264.0
offset_bottom = 1372.0
scale = Vector2(0.599992, 0.599992)

[node name="Attack range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack range"]
position = Vector2(6.10352e-05, 3.8147e-06)
shape = SubResource("CircleShape2D_fulsm")

[node name="inventory_gui" parent="." instance=ExtResource("20_60mlk")]
offset_left = -440.0
offset_top = -510.0
offset_right = -400.0
offset_bottom = -470.0
scale = Vector2(2.6, 2.6)

[connection signal="body_entered" from="Attack range" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="Attack range" to="." method="_on_attack_range_body_exited"]
